--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,6 +8,7 @@ on:
 env:
   APP_NAME: planner-app
   DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
+  PORT: 3000
 
 jobs:
   build:
@@ -41,4 +42,4 @@ jobs:
             docker pull docker.io/${{ env.DOCKER_USER }}/${{ env.APP_NAME }}:${{ github.sha }}
             docker stop ${{ env.APP_NAME }} || true
             docker rm ${{ env.APP_NAME }} || true
-            docker run --init --restart unless-stopped -d -p 3000:3000 --name ${{ env.APP_NAME }} docker.io/${{ env.DOCKER_USER }}/${{ env.APP_NAME }}:${{ github.sha }}
+            docker run --init --restart unless-stopped -d -p ${{ env.PORT }}:${{ env.PORT }} --name ${{ env.APP_NAME }} docker.io/${{ env.DOCKER_USER }}/${{ env.APP_NAME }}:${{ github.sha }}
