--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expense-app",
+  "name": "planner",
   "module": "server/index.ts",
   "type": "module",
   "scripts": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
+    "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "hono": "^4.5.5",
     "zod": "^3.23.8"
   }
