Add Kinde env variables to Github Actions yml

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,7 +29,14 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-
+
+    env:
+      KINDE_DOMAIN: ${{ secrets.KINDE_DOMAIN }}
+      KINDE_CLIENT_ID: ${{ secrets.KINDE_CLIENT_ID }}
+      KINDE_CLIENT_SECRET: ${{ secrets.KINDE_CLIENT_SECRET }}
+      KINDE_REDIRECT_URI: ${{ secrets.KINDE_REDIRECT_URI }}
+      KINDE_LOGOUT_REDIRECT_URI: ${{ secrets.KINDE_LOGOUT_REDIRECT_URI }}
 
     steps:
       - name: Deploy to remote server
