--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,13 +31,6 @@ jobs:
     needs: build
     runs-on: ubuntu-
 
-    env:
-      KINDE_DOMAIN: ${{ secrets.KINDE_DOMAIN }}
-      KINDE_CLIENT_ID: ${{ secrets.KINDE_CLIENT_ID }}
-      KINDE_CLIENT_SECRET: ${{ secrets.KINDE_CLIENT_SECRET }}
-      KINDE_REDIRECT_URI: ${{ secrets.KINDE_REDIRECT_URI }}
-      KINDE_LOGOUT_REDIRECT_URI: ${{ secrets.KINDE_LOGOUT_REDIRECT_URI }}
-
     steps:
       - name: Deploy to remote server
         uses: appleboy/ssh-action@master
@@ -49,4 +42,10 @@ jobs:
             docker pull docker.io/${{ env.DOCKER_USER }}/${{ env.APP_NAME }}:${{ github.sha }}
             docker stop ${{ env.APP_NAME }} || true
             docker rm ${{ env.APP_NAME }} || true
-            docker run --init --restart unless-stopped -d -p ${{ env.PORT }}:${{ env.PORT }} --name ${{ env.APP_NAME }} docker.io/${{ env.DOCKER_USER }}/${{ env.APP_NAME }}:${{ github.sha }}
+            docker run --init --restart unless-stopped -d -p ${{ env.PORT }}:${{ env.PORT }} --name ${{ env.APP_NAME }} \
+              -e KINDE_DOMAIN=${{ secrets.KINDE_DOMAIN }} \
+              -e KINDE_CLIENT_ID=${{ secrets.KINDE_CLIENT_ID }} \
+              -e KINDE_CLIENT_SECRET=${{ secrets.KINDE_CLIENT_SECRET }} \
+              -e KINDE_REDIRECT_URI=${{ secrets.KINDE_REDIRECT_URI }} \
+              -e KINDE_LOGOUT_REDIRECT_URI=${{ secrets.KINDE_LOGOUT_REDIRECT_URI }} \
+              docker.io/${{ env.DOCKER_USER }}/${{ env.APP_NAME }}:${{ github.sha }}
