--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "scripts": {
     "start": "bun server/index.ts",
     "dev": "bun --watch server/index.ts",
-    "check-updates": "bun x npm-check-updates --interactive --format group"
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "check-updates": "bun x npm-check-updates --interactive --format group",
+    "tsc": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.24.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -16,7 +21,9 @@
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
+    "drizzle-orm": "^0.33.0",
     "hono": "^4.5.5",
+    "postgres": "^3.4.4",
     "zod": "^3.23.8"
   }
 }
