--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-form": "^0.29.1",
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-router": "^1.40.0",
@@ -20,8 +20,10 @@
     "@tanstack/zod-form-adapter": "^0.29.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.427.0",
     "react": "^18.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
