--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-form": "^0.29.1",
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-router": "^1.40.0",
