--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "start": "bun server/index.ts",
     "dev": "bun --watch server/index.ts",
+    "lint": "eslint ./server ./frontend/src",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "check-updates": "bun x npm-check-updates --interactive --format group",
-    "tsc": "tsc --noEmit"
+    "check-updates": "bun x npm-check-updates --interactive --format group"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@types/bun": "latest",
-    "drizzle-kit": "^0.24.0"
+    "drizzle-kit": "^0.24.0",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
+    "typescript-eslint": "^8.3.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
