--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-orm": "^0.33.0",
     "hono": "^4.5.5",
     "postgres": "^3.4.4",
+    "ts-essentials": "^10.0.2",
     "zod": "^3.23.8"
   }
 }
