Add eslint check on git commit with husky git hooks

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "check-updates": "bun x npm-check-updates --interactive --format group"
+    "check-updates": "bun x npm-check-updates --interactive --format group",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -17,6 +18,7 @@
     "drizzle-kit": "^0.24.0",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
+    "husky": "^9.1.5",
     "typescript-eslint": "^8.3.0"
   },
   "peerDependencies": {
