--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
