Add theme toggle, add create and edit task model, cleanup old endpoints, add type check script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "check-updates": "bun x npm-check-updates --interactive --format group",
-    "prepare": "husky"
+    "prepare": "husky",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
