--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.33.0",
     "hono": "^4.5.5",
     "postgres": "^3.4.4",
