Extract business logic to services, add tests and run tests during CI/CD

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Run ESLint
         run: bun run lint
 
+      - name: Run tests
+        run: bun test
+
       - name: Build Docker image
         run: docker build . -t docker.io/${{ env.DOCKER_USER }}/${{ env.APP_NAME }}:${{ github.sha }}
 
