Make husky prepare script never fail during CI

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "check-updates": "bun x npm-check-updates --interactive --format group",
-    "prepare": "husky",
+    "prepare": "husky || true",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
